test/expected/k_explain_ai.out
struct S; explain int S[4]
             ^
14: error: "S": previously declared as type: typedef struct S S
